--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,4 +1,4 @@
-pipeline {
+exus_pipeline"exus_pipeline"pipeline {
     agent any
     tools {
         // Note: this should match with the tool name configured in your jenkins instance (JENKINS_URL/configureTools/)
@@ -12,7 +12,8 @@ pipeline {
         // Where your Nexus is running
         NEXUS_URL = "18.222.118.84:8081"
         // Repository where we will upload the artifact
-        NEXUS_REPOSITORY = "nexus_pipeline"
+        NEXUS_REPOSITORY = "NeusPipe"
+
         // Jenkins credential id to authenticate to Nexus OSS
         NEXUS_CREDENTIAL_ID = "Nexus_Creds"
     }
@@ -21,7 +22,7 @@ pipeline {
             steps {
                 script {
                     // Let's clone the source
-                    git 'https://github.com/Poojith8091/spring3-mvc-maven-xml-hello-world.git';
+                    git 'https://github.com/Poojith8091/spring3-mvc-maven-xml-hello-world.git' 
                 }
             }
         }
